# MegaGo

./: CMakeLists.txt  CMakeLists.txt.user.67e816f  README.md  ginclude.h  main.cpp
model/: basemodelobject.cpp  basemodelobject.h  gvar.cpp  gvar.h  programstate.cpp  programstate.h
model/accounts/: clientaccount.cpp  clientaccount.h
model/actors/: allience.cpp  allience.h  field.cpp  field.h  tile.cpp  tile.h  token.cpp  token.h
model/gameloop/: gamemode.cpp  gamemode.h  player.cpp  player.h  team.cpp  team.h
